# exemple-service-api/src/main/java/com/exemple/service/api/core/authorization/impl/AuthorizationCheckServiceImpl.java
@@ -1,6 +1,6 @@
 package com.exemple.service.api.core.authorization.impl;
 
-import java.util.List;
+import java.util.Objects;
 import java.util.UUID;
 
 import javax.ws.rs.ForbiddenException;
@@ -10,10 +10,8 @@ import org.springframework.stereotype.Service;
 
 import com.exemple.service.api.common.security.ApiSecurityContext;
 import com.exemple.service.api.core.authorization.AuthorizationCheckService;
-import com.exemple.service.resource.common.util.JsonNodeUtils;
-import com.exemple.service.resource.login.LoginField;
 import com.exemple.service.resource.login.LoginResource;
-import com.fasterxml.jackson.databind.JsonNode;
+import com.exemple.service.resource.login.model.LoginEntity;
 
 @Service
 @Profile("!noSecurity")
@@ -29,9 +27,9 @@ public class AuthorizationCheckServiceImpl implements AuthorizationCheckService 
     @Override
     public void verifyAccountId(UUID id, ApiSecurityContext securityContext) {
 
-        JsonNode login = loginResource.get(securityContext.getUserPrincipal().getName()).orElseGet(JsonNodeUtils::init);
+        LoginEntity login = loginResource.get(securityContext.getUserPrincipal().getName()).orElseThrow(ForbiddenException::new);
 
-        checkIfAccountIdAndLoginIdAreIdentical(id, login);
+        checkIfIdAreIdentical(id, login.getId());
 
     }
 
@@ -40,38 +38,20 @@ public class AuthorizationCheckServiceImpl implements AuthorizationCheckService 
 
         if (!username.equals(securityContext.getUserPrincipal().getName())) {
 
-            JsonNode login = loginResource.get(username).orElseGet(JsonNodeUtils::init);
+            LoginEntity login1 = loginResource.get(username).orElseThrow(ForbiddenException::new);
 
-            checkIfLoginIdIsPresent(login);
+            LoginEntity login2 = loginResource.get(securityContext.getUserPrincipal().getName()).orElseThrow(ForbiddenException::new);
 
-            UUID id = UUID.fromString(login.get(LoginField.ID.field).textValue());
-            checkIfUsernameExistInLogin(securityContext.getUserPrincipal().getName(), loginResource.get(id));
-        }
-    }
-
-    private static void checkIfAccountIdAndLoginIdAreIdentical(UUID id, JsonNode login) {
-
-        if (!id.toString().equals(login.path(LoginField.ID.field).asText(null))) {
-
-            throw new ForbiddenException();
-        }
-    }
-
-    private static void checkIfLoginIdIsPresent(JsonNode login) {
-
-        if (login.path(LoginField.ID.field).isMissingNode()) {
-
-            throw new ForbiddenException();
+            checkIfIdAreIdentical(login1.getId(), login2.getId());
 
         }
     }
 
-    private static void checkIfUsernameExistInLogin(String username, List<JsonNode> logins) {
+    private static void checkIfIdAreIdentical(UUID id1, UUID id2) {
 
-        if (logins.stream().map(l -> l.get(LoginField.USERNAME.field).textValue()).noneMatch(username::equals)) {
+        if (!Objects.equals(id1, id2)) {
 
             throw new ForbiddenException();
-
         }
     }
 
