# exemple-service-resource/src/main/java/com/exemple/service/resource/login/LoginField.java
@@ -1,13 +1,0 @@
-package com.exemple.service.resource.login;
-
-public enum LoginField {
-
-    ID("id"), USERNAME("username");
-
-    public final String field;
-
-    LoginField(String field) {
-        this.field = field;
-    }
-
-}
