# exemple-service-resource/src/main/java/com/exemple/service/resource/login/LoginResource.java
@@ -1,25 +1,18 @@
 package com.exemple.service.resource.login;
 
-import java.util.List;
 import java.util.Optional;
-import java.util.UUID;
 
 import javax.validation.constraints.NotBlank;
 import javax.validation.constraints.NotNull;
 
-import com.exemple.service.resource.common.validator.Json;
-import com.exemple.service.resource.login.exception.LoginResourceExistException;
-import com.fasterxml.jackson.databind.JsonNode;
+import com.exemple.service.resource.login.exception.UsernameAlreadyExistsException;
+import com.exemple.service.resource.login.model.LoginEntity;
 
 public interface LoginResource {
 
-    Optional<JsonNode> get(@NotBlank String username);
+    Optional<LoginEntity> get(@NotBlank String username);
 
-    void update(@Json(table = "login") JsonNode source);
-
-    void save(@Json(table = "login") JsonNode source) throws LoginResourceExistException;
+    void save(@NotNull LoginEntity login) throws UsernameAlreadyExistsException;
 
     void delete(@NotBlank String username);
-
-    List<JsonNode> get(@NotNull UUID id);
 }
