# exemple-service-resource/src/main/java/com/exemple/service/resource/login/exception/UsernameAlreadyExistsException.java
@@ -1,0 +1,22 @@
+package com.exemple.service.resource.login.exception;
+
+import java.text.MessageFormat;
+
+public class UsernameAlreadyExistsException extends Exception {
+
+    protected static final String EXCEPTION_MESSAGE = "Login {0} already exists";
+
+    private static final long serialVersionUID = 1L;
+
+    private final String username;
+
+    public UsernameAlreadyExistsException(String username) {
+        super(MessageFormat.format(EXCEPTION_MESSAGE, username));
+        this.username = username;
+    }
+
+    public String getUsername() {
+        return this.username;
+    }
+
+}
